--- a/dear_petition/templates/base.html
+++ b/dear_petition/templates/base.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Upload</a>
+              <a class="nav-link" href="{% url 'upload-report' %}">Upload</a>
             </li>
             {% if request.user.is_authenticated %}
               <li class="nav-item">
