add view to download pd

--- a/dear_petition/templates/petition/view.html
+++ b/dear_petition/templates/petition/view.html
@@ -6,6 +6,13 @@
 {% block content %}
 <div class="container">
   <h2>CIPRS Record: {{ record.data.Defendant.Name }}</h2>
+  <br />
+  <form method="POST" action="{% url 'view-record' record.pk %}">
+    {% csrf_token %}
+    <button class="primaryAction btn btn-primary" type="submit">{% trans "Generate Petition Form" %}</button>
+  </form>
+  <br />
+  <h3>Extracted Data</h3>
   <pre><code>{{ data_pretty }}</code><pre>
 </div>
 {% endblock content %}
