add source output to view

--- a/dear_petition/static/sass/project.scss
+++ b/dear_petition/static/sass/project.scss
@@ -35,3 +35,15 @@ $red: #b94a48;
   border-color: $dark-pink;
   color: $red;
 }
+
+.nav-tabs {
+  margin-bottom: 1rem;
+}
+
+div#source {
+  background-color: $mint-green;
+}
+
+div#source code {
+  font-size: 10px;
+}
