--- a/dear_petition/templates/petition/view.html
+++ b/dear_petition/templates/petition/view.html
@@ -4,15 +4,29 @@
 {% block title %}CIPRS Record: {{ record.data.Defendant.Name }}{% endblock %}
 
 {% block content %}
-<div class="container">
-  <h2>CIPRS Record: {{ record.data.Defendant.Name }}</h2>
+  <div class="row">
+    <div class="col-sm">
+      <h2>CIPRS Record: {{ record.data.Defendant.Name }}</h2>
+    <div>
+  </div>
   <br />
-  <form method="POST" action="{% url 'view-record' record.pk %}">
-    {% csrf_token %}
-    <button class="primaryAction btn btn-primary" type="submit">{% trans "Generate Petition Form" %}</button>
-  </form>
-  <br />
-  <h3>Extracted Data</h3>
-  <pre><code>{{ data_pretty }}</code><pre>
-</div>
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="petition-tab" data-toggle="tab" href="#petition" role="tab" aria-controls="home" aria-selected="true">Petition</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="source-tab" data-toggle="tab" href="#source" role="tab" aria-controls="profile" aria-selected="false">Source</a>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="petition" role="tabpanel" aria-labelledby="petition-tab">
+      <form method="POST" action="{% url 'view-record' record.pk %}">
+        {% csrf_token %}
+        <button class="primaryAction btn btn-primary" type="submit">{% trans "Generate Petition Form" %}</button>
+      </form>
+    </div>
+    <div class="tab-pane fade" id="source" role="tabpanel" aria-labelledby="source-tab">
+      <pre><code>{{ source|linebreaks }}</code></pre>
+    </div>
+  </div>
 {% endblock content %}
