enable saving PDF to S3 (and viewing)

--- a/dear_petition/static/sass/project.scss
+++ b/dear_petition/static/sass/project.scss
@@ -40,10 +40,7 @@ $red: #b94a48;
   margin-bottom: 1rem;
 }
 
-div#source {
+div#source pre {
   background-color: $mint-green;
-}
-
-div#source code {
   font-size: 10px;
 }
