--- a/dear_petition/templates/petition/upload.html
+++ b/dear_petition/templates/petition/upload.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container">
-  <h2>Upload CIPRS Report</h2>
+  <h1 class='page-header'>Upload CIPRS Report</h1>
     <form enctype="multipart/form-data" method="POST" action="{% url 'upload-report' %}">
       {% csrf_token %}
       {{ form|crispy }}
