change background to teal

--- a/dear_petition/static/sass/project.scss
+++ b/dear_petition/static/sass/project.scss
@@ -16,6 +16,7 @@ $black: #000;
 $pink: #f2dede;
 $dark-pink: #eed3d7;
 $red: #b94a48;
+$teal: #107F8E;
 
 ////////////////////////////////
 		//Alerts//
@@ -50,5 +51,5 @@ h1.page-header {
 }
 
 .bg-light {
-  background-color: $red !important;
+  background-color: $teal !important;
 }
