--- a/dear_petition/static/css/project.css
+++ b/dear_petition/static/css/project.css
@@ -1,13 +1,24 @@
-/* These styles are generated from project.scss. */
-
 .alert-debug {
-  color: black;
-  background-color: white;
+  background-color: #fff;
   border-color: #d6e9c6;
-}
+  color: #000; }
 
 .alert-error {
-  color: #b94a48;
   background-color: #f2dede;
   border-color: #eed3d7;
-}
+  color: #b94a48; }
+
+.nav-tabs {
+  margin-bottom: 16px;
+  margin-bottom: 1rem; }
+
+div#source pre {
+  background-color: #d6e9c6;
+  font-size: 10px; }
+
+h1.page-header {
+  margin-top: 24px;
+  margin-top: 1.5rem; }
+
+.bg-light {
+  background-color: #107F8E !important; }
