--- a/dear_petition/templates/petition/view.html
+++ b/dear_petition/templates/petition/view.html
@@ -106,6 +106,28 @@
               </tr>
             </tbody>
           </table>
+          <h4>Offenses</h4>
+          <table class="table table-hover table-sm">
+            <th>File #</th>
+            <th>Arrest Date</th>
+            <th>Description</th>
+            <th>Offense Date</th>
+            <th>Disposition</th>
+            <th>Disposition Date</th>
+            <tbody>
+              {% for offense in record.offenses %}
+              <tr>
+                <td>{{record.file_no}}</td>
+                <td>{{record.offense_date}}</td>
+                <td>{{offense.Description}}</td>
+                <td>{{record.offense_date}}</td>
+                <td>{{record.disposition_method}}</td>
+                <td>{{record.disposed_on}}</td>
+              </tr>
+              
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
