Added arrest date to view

--- a/dear_petition/templates/petition/view.html
+++ b/dear_petition/templates/petition/view.html
@@ -80,6 +80,11 @@
                 <td>{{ record.offense_date }}</td>
               </tr>
               <tr>
+                <th scope="row"></th>
+                <td>Arrest Date</td>
+                <td>{{ record.arrest_date }}</td>
+              </tr>
+              <tr>
                 <th scope="row">Offense Record</th>
                 <td>Disposed On</td>
                 <td>{{ record.disposed_on }}</td>
