--- a/dear_petition/templates/petition/view.html
+++ b/dear_petition/templates/petition/view.html
@@ -7,6 +7,12 @@
   <div class="row">
     <div class="col-sm">
       <h1 class='page-header'>{{ record.data.Defendant.Name|title }}</h1>
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{% url 'create-petition' record.batch.pk %}">Petition</a></li>
+          <li class="breadcrumb-item active" aria-current="page">CIPRS Record {{ record.pk }}</li>
+        </ol>
+      </nav>
     <div>
   </div>
   <br />
