--- a/dear_petition/templates/petition/create.html
+++ b/dear_petition/templates/petition/create.html
@@ -12,14 +12,17 @@
   <br />
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" id="petition-tab" data-toggle="tab" href="#petition" role="tab" aria-controls="petition" aria-selected="true">Petition Form</a>
+      <a class="nav-link{% ifequal tab 'petition' %} active {% endifequal %}" id="petition-tab" data-toggle="tab" href="#petition" role="tab" aria-controls="petition" aria-selected={% ifequal tab 'petition' %}"true"{% else %}"false"{% endifequal %}>Petition Form</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="ciprs-tab" data-toggle="tab" href="#ciprs" role="tab" aria-controls="ciprs" aria-selected="true">CIPRS Records</a>
+      <a class="nav-link{% ifequal tab 'ciprs' %} active {% endifequal %}" id="ciprs-tab" data-toggle="tab" href="#ciprs" role="tab" aria-controls="ciprs" aria-selected={% ifequal tab 'ciprs' %}"true"{% else %}"false"{% endifequal %}>CIPRS Records</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link{% ifequal tab 'comments' %} active {% endifequal %}" id="comments-tab" data-toggle="tab" href="#comments" role="tab" aria-controls="comments" aria-selected={% ifequal tab 'comments' %}"true"{% else %}"false"{% endifequal %}>Comments</a>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="petition" role="tabpanel" aria-labelledby="petition-tab">
+    <div class="tab-pane fade {% ifequal tab 'petition' %}show active {% endifequal %}" id="petition" role="tabpanel" aria-labelledby="petition-tab">
       <div class="row">
         <div class="col-7">
           <h3>Petition Form</h3>
@@ -31,12 +34,19 @@
         </div>
       </div>
     </div>
-    <div class="tab-pane fade" id="ciprs" role="tabpanel" aria-labelledby="source-tab">
+    <div class="tab-pane fade {% ifequal tab 'ciprs' %}show active {% endifequal %}" id="ciprs" role="tabpanel" aria-labelledby="source-tab">
       <ul>
         {% for record in batch.records.all %}
         <li><a href="{% url 'view-record' record.pk %}">Record {{ record.pk }}</a></li>
         {% endfor %}
       </ul>
     </div>
+    <div class="tab-pane fade {% ifequal tab 'comments' %}show active {% endifequal %}" id="comments" role="tabpanel" aria-labelledby="source-tab">
+      {% block comments %}
+        {% include "components/comments_section.html" %}
+      {% endblock %}
+    </div>
   </div>
 {% endblock content %}
+
+
