now saving Offense and OffenseRecord instances in UploadFileForm save method.

--- a/dear_petition/templates/petition/view.html
+++ b/dear_petition/templates/petition/view.html
@@ -54,12 +54,12 @@
               <tr>
                 <th scope="row"></th>
                 <td>Sex</td>
-                <td>{{ record.data.Defendant.Sex }}</td>
+                <td>{{ record.sex}}</td>
               </tr>
               <tr>
                 <th scope="row"></th>
                 <td>Race</td>
-                <td>{{ record.data.Defendant.Race }}</td>
+                <td>{{ record.race }}</td>
               </tr>
               <tr>
                 <th scope="row"></th>
